* adding topic facet ul overflow management to expand on hover (with transtion when supported), height fixed to 250px for now - fixes #5407
git-svn-id: https://pacps01.oecd.org/svn/publication-index/trunk@248 370d6576-d9c0-ee4c-9843-071cdce0ebce

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -412,6 +412,21 @@ a.selected{
     font-weight:bold;
     color:black;
 }
+
+div.facet.topic>ul {
+    max-height:250px;
+    overflow: hidden;
+    transition: 1s;
+    -moz-transition: 1s; /* Firefox 4 */
+    -webkit-transition: 1s; /* Safari and Chrome */
+    -o-transition: 1s; /* Opera */
+    -ms-transition: 1s; /* IE10 */
+}
+div.facet.topic:hover>ul {    
+    max-height: 999px;
+    overflow: hidden;
+}
+
 img.flag{
     margin:0.2em;
     width:16px;
